--- a/src/pages/ProductPage/style.css
+++ b/src/pages/ProductPage/style.css
@@ -40,8 +40,19 @@
   height: 25px;
 }
 
+.price-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 500px;
+}
+
+.desc-container {
+  margin-top: 20px;
+}
+
 .desc-title {
-  margin: 0;
+  margin-bottom: 10px;
 }
 
 .desc-list {
@@ -50,17 +61,9 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  padding-left: 10px;
 }
 
 .desc-item {
   padding: 5px 0;
-}
-
-.price-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
-  width: 500px;
+  font-size: 20px;
 }
